--- a/OI Toolbox/OI Toolbox/OI Toolbox.vcxproj.filters
+++ b/OI Toolbox/OI Toolbox/OI Toolbox.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OI Toolbox.cpp">
+    <ClCompile Include="OI_Toolbox.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="OI_Toolbox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
